<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/titingbackground"
    android:orientation="horizontal" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textColor="#000000"
                android:textSize="15sp" >
            </TextView>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="230sp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon2" >
                </ImageView>

                <TableLayout
                    android:id="@+id/tableLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tithing"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>

                        <TextView
                            android:id="@+id/tithingtotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fastofferings"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>

                        <TextView
                            android:id="@+id/offeringstotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView02"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wmissionary"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>

                        <TextView
                            android:id="@+id/wmissionary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gmissionary"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>

                        <TextView
                            android:id="@+id/gmissionary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView04"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bom"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>

                        <TextView
                            android:id="@+id/bom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView05"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humanitarian"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>

                        <TextView
                            android:id="@+id/humanitarian"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView06"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temple"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>

                        <TextView
                            android:id="@+id/temple"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView07"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/education"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>

                        <TextView
                            android:id="@+id/perpetual"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView08"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/other"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>

                        <TextView
                            android:id="@+id/other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Owed"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>

                        <TextView
                            android:id="@+id/tithingamount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Remaining"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>

                        <TextView
                            android:id="@+id/remaining"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:textSize="15sp" >
                        </TextView>
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="25sp" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ytd"
                    android:textColor="#000000"
                    android:textSize="15sp" >
                </TextView>

                <TextView
                    android:id="@+id/ytd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="15sp" >
                </TextView>
            </LinearLayout>

            <TableLayout
                android:id="@+id/tableLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:weightSum="1.0" >

                    <EditText
                        android:id="@+id/tithing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:hint="@string/Amount"
                        android:inputType="numberDecimal"
                        android:textSize="20sp"
                        android:width="270sp" >
                    </EditText>

                    <Button
                        android:id="@+id/add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Add" >
                    </Button>
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/item"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/item" >
                </Spinner>
            </LinearLayout>

            <TableLayout
                android:id="@+id/tableLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/enteramount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/enteramount"
                        android:inputType="numberDecimal"
                        android:textSize="20sp"
                        android:width="170sp" >
                    </EditText>

                    <Button
                        android:id="@+id/addoffering"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Add" >
                    </Button>

                    <Button
                        android:id="@+id/reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Reset" >
                    </Button>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>